--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@ html {
 a{
     text-decoration: none;
 }
+img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+}
 .container{
     min-height: 100vh;
     width: 100%;
@@ -101,6 +106,71 @@ a{
 }
 
 /* SERVICE SECTION */
+#services .service{
+    flex-direction: column;
+    text-align: center;
+    max-width: 150rem;
+    margin: 0 auto;
+    padding: 10rem 0;
+}
+.service__title{
+    font-size: 4rem;
+    font-weight: 300;
+    /* color: #eee; */
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+}
+.service__title span{
+    color: crimson;
+}
+.service__paragraph{
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    line-height: 2.5rem;
+    font-weight: 300;
+    letter-spacing:0.05rem
+}
+.service-bottom{
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+.card-item{
+    flex-basis: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 3rem;
+    border-radius: 1rem;
+    margin: 1rem .5rem;
+    background-image: url("../assets/img-01.jpg");
+    background-size: cover;
+    /* background-attachment: fixed; */
+    position: relative;
+    z-index: 1;
+    color: #eee;
+}
+.card-item::after{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 100%;
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    opacity: .6;
+    z-index: -1;
+}
+.card__icon{
+    height:8rem;
+    width:8rem;
+    margin-bottom: 2rem;
+}
 
 
 /* END SERVICE SECTION */
