--- a/css/styles.css
+++ b/css/styles.css
@@ -8,196 +8,713 @@
 html {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-img{
-    width:100%;
-    height:100%;
-    object-fit: cover;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.container{
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content:center;
+p {
+  font-size: 1.6rem;
+  font-weight: 300;
+  text-align: left;
+  line-height: 2.5;
+  letter-spacing: 0.05rem;
 }
+.title {
+  font-size: 4rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+.title span {
+  color: crimson;
+}
+.brand__title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #eee;
+  padding-left: 2rem;
+}
+.brand__title span {
+  color: crimson;
+}
+
+.container {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cta {
+  cursor: pointer;
+  display: inline-block;
+  padding: 1rem 3rem;
+  color: crimson;
+  border: 2px solid crimson;
+  background-color: transparent;
+  font-size: 2rem;
+  margin-top: 3rem;
+  letter-spacing: 0.1rem;
+  transition: 0.3s ease-in-out;
+  transition-property: background-color, color;
+}
+.cta:hover {
+  color: #eee;
+  background-color: crimson;
+}
+
+/* Header Section */
+#header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  height: auto;
+}
+.header {
+  min-height: 8vh;
+  background-color: rgba(31, 30, 30, 0.24);
+  transition:background-color .5s ease-in-out;
+}
+.nav-bar {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 130rem;
+  height: 100%;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+.nav-list ul {
+  list-style: none;
+  background: rgb(31, 30, 30);
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  z-index: 1;
+  transition: 0.5s ease-in-out;
+  transition-property: left;
+}
+.nav-list ul.active {
+  left: 0;
+}
+.nav-list ul a {
+  font-size: 2.5rem;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  display: block;
+  padding: 2rem;
+}
+.nav-list ul a::after {
+  content: attr(data-after);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  color: rgba(240, 248, 255, 0.121);
+  font-size: 13rem;
+  letter-spacing: 50px;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
+  transition-property: transform, letter-spacing;
+}
+.nav-list li:hover a::after {
+  transform: translate(-50%, -50%) scale(1);
+  letter-spacing: initial;
+}
+.nav-list ul li:hover a {
+  color: crimson;
+  font-weight: 700;
+}
+/* hamburger */
+.hamburger {
+  position: relative;
+  display: inline-block;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  cursor: pointer;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0.8);
+  margin-right: 2rem;
+}
+.hamburger::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 0.3rem solid #fff;
+  animation: hamburger_border 1s ease-in-out infinite;
+}
+.hamburger__bar {
+  width: 3rem;
+  height: 0.2rem;
+  position: relative;
+  background-color: #fff;
+  z-index: -1;
+}
+.hamburger__bar::before,
+.hamburger__bar::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  background-color: #fff;
+  transition: 0.3s ease;
+  transition-property: top, bottom;
+}
+.hamburger__bar::after {
+  top: 0.8rem;
+}
+.hamburger.active .hamburger__bar::after {
+  top: 0;
+}
+.hamburger__bar::before {
+  bottom: 0.8rem;
+}
+.hamburger.active .hamburger__bar::before {
+  bottom: 0;
+}
+
+/* End Header Section */
 
 /* HERO SECTION */
-#hero{
-    background-image: url("../assets/hero-bg.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
+#hero {
+  background-image: url("../assets/office.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
 }
-#hero::after{
-    content: "";
-    position: absolute;
-    background-color: rgba(0,0,0,0.7);
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
+#hero::after {
+  content: "";
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
 }
-.hero{
-    max-width: 1200px;
-    margin: 0  auto;
-    padding: 0 5rem;
-    justify-content:flex-start;
+.hero {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 5rem;
+  justify-content: flex-start;
 }
-.hero__title{
-    font-size: 4rem;
-    display: block;
-    width: fit-content;
-    position: relative;
-    color: transparent;
-    animation: text_reveal 0.5s ease-in-out forwards;
-    animation-delay: 1s;
+.hero__title {
+  font-size: 4rem;
+  display: block;
+  width: fit-content;
+  position: relative;
+  color: transparent;
+  animation: text_reveal 0.5s ease-in-out forwards;
+  animation-delay: 1s;
 }
-.hero__title span{
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color:crimson;
-    width: 0;
-    height: 100%;
-    animation:text_reveal_box 1s ease-in-out;
-    animation-delay: .3s;
+.hero__title span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: crimson;
+  width: 0;
+  height: 100%;
+  animation: text_reveal_box 1s ease-in-out;
+  animation-delay: 0.3s;
 }
-.hero__title:nth-child(1){
-    animation-delay: 1s;
+.hero__title:nth-child(1) {
+  animation-delay: 1s;
 }
-.hero__title:nth-child(2){
-    animation-delay: 2s;
+.hero__title:nth-child(2) {
+  animation-delay: 2s;
 }
-.hero__title:nth-child(3){
-    animation: text_reveal_name .5s ease-in-out forwards;
-    animation-delay: 3s;
+.hero__title:nth-child(3) {
+  animation: text_reveal_name 0.5s ease-in-out forwards;
+  animation-delay: 3s;
 }
-.hero__title:nth-child(1) span{
-    animation-delay: .5s;
+.hero__title:nth-child(1) span {
+  animation-delay: 0.5s;
 }
-.hero__title:nth-child(2) span{
-    animation-delay: 1.5s;
+.hero__title:nth-child(2) span {
+  animation-delay: 1.5s;
 }
-.hero__title:nth-child(3) span{
-    animation-delay: 2.5s;
+.hero__title:nth-child(3) span {
+  animation-delay: 2.5s;
 }
-#hero .cta{
-    cursor: pointer;
-    display: inline-block;
-    padding: 1rem 3rem;
-    color: crimson;
-    border: 2px solid crimson;
-    background-color:transparent;
-    font-size: 2rem;
-    margin-top: 3rem;
-    letter-spacing: 0.1rem;
-    transition: 0.3s ease-in-out; 
-    transition-property: background-color, color;
-}
-#hero .cta:hover{
-    color: #eee;
-    background-color:crimson;
-}
+/* END HERO SECTION */
 
 /* SERVICE SECTION */
-#services .service{
-    flex-direction: column;
-    text-align: center;
-    max-width: 150rem;
-    margin: 0 auto;
-    padding: 10rem 0;
+#services .service {
+  flex-direction: column;
+  text-align: center;
+  max-width: 150rem;
+  margin: 0 auto;
+  padding: 10rem 0;
 }
-.service__title{
-    font-size: 4rem;
-    font-weight: 300;
-    /* color: #eee; */
-    margin-bottom: 1rem;
-    text-transform: uppercase;
-    letter-spacing: .2rem;
+.service-top {
+  max-width: 50rem;
+  /* width: 90%; */
+  margin: 0 auto;
 }
-.service__title span{
-    color: crimson;
+.service__paragraph {
+  font-size: 1.5rem;
+  margin-top: 0.5rem;
+  line-height: 2.5rem;
+  font-weight: 300;
+  letter-spacing: 0.05rem;
+  text-align: center;
 }
-.service__paragraph{
-    font-size: 1.5rem;
-    margin-top: 0.5rem;
-    line-height: 2.5rem;
-    font-weight: 300;
-    letter-spacing:0.05rem
+.service-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
 }
-.service-bottom{
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
+.card-item {
+  flex-basis: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 3rem;
+  border-radius: 1rem;
+  margin: 1rem 0.5rem;
+  background-image: url("../assets/img-01.jpg");
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+  color: #eee;
+  overflow: hidden;
 }
-.card-item{
-    flex-basis: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 3rem;
-    border-radius: 1rem;
-    margin: 1rem .5rem;
-    background-image: url("../assets/img-01.jpg");
-    background-size: cover;
-    /* background-attachment: fixed; */
-    position: relative;
-    z-index: 1;
-    color: #eee;
+.card-item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  opacity: 0.6;
+  z-index: -1;
 }
-.card-item::after{
-    content:"";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .6;
-    z-index: -1;
+.card__icon {
+  height: 8rem;
+  width: 8rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
 }
-.card__icon{
-    height:8rem;
-    width:8rem;
-    margin-bottom: 2rem;
+.card__title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
-
-
 /* END SERVICE SECTION */
 
+/* PROJECTS SECTION */
+.projects {
+  flex-direction: column;
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 15rem 0;
+}
+.projects__header {
+  margin-bottom: 5rem;
+}
+.all-projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  /* flex-direction: column; */
+}
+.project__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 2rem auto;
+  overflow: hidden;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
+}
+.project__info {
+  /* height:70%; */
+  padding: 3rem;
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  color: #eee;
+  height: 100%;
+}
+.info__title {
+  font-size: 4rem;
+  font-weight: 500;
+}
+.info__subtitle {
+  font-size: 2rem;
+  margin: 1rem 0;
+  font-weight: 300;
+}
+.info__paragraph {
+  margin-top: 1rem;
+}
+.project__figure {
+  position: relative;
+  flex-basis: 50%;
+  overflow: hidden;
+}
+.project__img {
+  height: 30rem;
+  transition: transform 0.3s ease-in-out;
+}
+.project__figure::after {
+  content: "";
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+}
+.project__item:hover .project__img {
+  transform: scale(1.1);
+}
+/* END PROJECTS SECTION */
 
-/* END HERO SECTION */
+/* ABOUT SECTION */
+.about {
+  flex-direction: column-reverse;
+  text-align: center;
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 10rem 2rem;
+}
+.about__figure {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  border: 1rem solid #fff;
+}
+.about__img {
+  width: 25rem;
+  height: 36rem;
+  margin: -0.5rem;
+}
+.about__figure::after {
+  content: "";
+  position: absolute;
+  top: 3rem;
+  left: -3rem;
+  width: 98%;
+  height: 98%;
+  border: 7px solid crimson;
+  z-index: -1;
+}
+.about__right {
+  width: 100%;
+}
+.about__subtitle {
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  margin-bottom: 1.5rem;
+}
+.about__paragraph {
+  margin-bottom: 2rem;
+}
+.about__right .cta {
+  margin-bottom: 5rem;
+}
+/* END ABOUT SECTION */
+
+/* CONTACT SECTION */
+.contact {
+  flex-direction: column;
+  max-width: 120rem;
+  margin: 0 auto;
+}
+.contact__items {
+  width: 40rem;
+  padding: 2rem;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+.contact__item {
+  /* border: 1px solid #000; */
+  width: 80%;
+  padding: 3rem;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+  box-shadow: 0 0 18px 0 #0000002c;
+  transition: box-shadow 0.3s ease-in-out;
+}
+.contact__item:hover {
+  box-shadow: 0 0 6px 0 #0000002c;
+}
+.contact__figure {
+  /* border: 1px solid #000; */
+  width: 100%;
+  height: 100%;
+  margin-bottom: 1rem;
+}
+.contact__img {
+  height: 5rem;
+  width: 5rem;
+}
+.contact__title {
+  font-size: 2.4rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+.contact__subtitle {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+/* END CONTACT SECTION */
+
+/* FOOTER SECTION */
+.footer {
+  margin-top: 5rem;
+  min-height: 20rem;
+  flex-direction: column;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  color: #eee;
+  position: relative;
+}
+.footer__description {
+  font-weight: 500;
+  font-size: 1.8rem;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  letter-spacing: 0.1rem;
+}
+.footer__figures {
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+}
+.footer__figure {
+  background-color: #aaa;
+  height: 5rem;
+  width: 5rem;
+  padding: 1rem;
+  border-radius: 50%;
+}
+.footer__img {
+  filter: grayscale(1);
+  transition: filter 0.3s ease-in-out;
+}
+.footer__img:hover {
+  filter: grayscale(0);
+}
+.footer__copy {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  color: #aaa;
+}
+/* END FOOTER SECTION */
 
 /* KEYFRAMES */
 @keyframes text_reveal_box {
-    50% {
-        width:100%;
-        left: 0;
-    }
-    100% {
-        width: 0;
-        left: 100%;
-    }
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
 }
 @keyframes text_reveal {
-    100%{
-        color: #eee;
-    }
+  100% {
+    color: #eee;
+  }
 }
 @keyframes text_reveal_name {
-    100%{
-        color: crimson;
-        font-weight: 700;
-    }
+  100% {
+    color: crimson;
+    font-weight: 700;
+  }
 }
+
+@keyframes hamburger_border {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.5);
+  }
+}
+
 /* END KEYFRAMES */
+
+/* Media Query for TABLETs */
+@media screen and (min-width: 768px) {
+  .cta {
+    font-size: 2.5rem;
+    padding: 2rem 6rem;
+  }
+  .title {
+    font-size: 6rem;
+  }
+
+  /* Hero */
+  .hero__title {
+    font-size: 7rem;
+  }
+  /* End Hero */
+
+  /* Services Section */
+  .card-item {
+    flex-basis: 45%;
+    padding: 3rem;
+    border-radius: 1rem;
+    margin: 2.5%;
+  }
+  /* End Services Section */
+
+  /* Projects Section */
+  .project__item {
+    width: 100%;
+    height: 40rem;
+    margin: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    flex-direction: row;
+  }
+  .project__item:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+  .project__info {
+    height: 100%;
+  }
+  .project__figure {
+    height: 100%;
+  }
+  .project__img {
+    height: 100%;
+  }
+  /* End Projects Section */
+
+  /* About Section */
+  .about {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+  }
+  .about__left {
+    margin-right: 1rem;
+  }
+  .about__img {
+    width: 30rem;
+    height: 45rem;
+  }
+  .about__right {
+    text-align: left;
+    margin-left: 1.5rem;
+  }
+  /* End About Section */
+
+  /* Contact Section */
+  .contact {
+    min-height: 20vh;
+  }
+  .contact__items {
+    flex-direction: row;
+    width: 100%;
+  }
+  .contact__item {
+    margin-right: 1rem;
+  }
+  .contact__info {
+    width: 100%;
+  }
+  .contact__subtitle {
+    font-size: 1.4rem;
+    /* font-weight: 500; */
+  }
+
+  /* End Contact Section */
+}
+/* End Media Query for TABLETs */
+
+/* Media Query for Desktop */
+@media screen and (min-width: 1200px) {
+  /* Header Section */
+  .hamburger{
+    display: none;
+  }
+  .nav-list ul {
+   position: initial;
+    display: block;
+    height: auto;
+    width:fit-content;
+    background: transparent;    
+  }
+  .nav-list ul a::after{
+    display: none;
+  }
+  .nav-list ul li{
+    display: inline-block;
+  }
+  .nav-list ul li a{
+    font-size: 2.5rem;
+  }
+
+
+
+  /* End Header Section */
+  /* Service Section */
+  .card-item {
+    flex-basis: 22%;
+    margin: 1.5%;
+  }
+  /* End Service Section */
+
+  /* About Section */
+  .about {
+    margin: 0 auto;
+  }
+  /* End About Section */
+}
+
+/* End Media Query for Desktop */
